--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
+        "christian-kohler.npm-intellisense",
         "coenraads.bracket-pair-colorizer",
         "mikestead.dotenv",
         "dsznajder.es7-react-js-snippets",
@@ -18,6 +19,7 @@
         "eg2.vscode-npm-script",
         "editorconfig.editorconfig",
         "stylelint.vscode-stylelint",
-        "arcanis.vscode-zipfs"
+        "arcanis.vscode-zipfs",
+        "okitavera.vscode-nunjucks-formatter"
     ]
 }
