--- a/package.json
+++ b/package.json
@@ -57,13 +57,13 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "alpinejs": "^3.0.9",
+        "alpinejs": "^3.1.1",
         "overlayscrollbars": "^1.13.1"
     },
     "devDependencies": {
         "@babel/core": "^7.14.6",
         "@babel/eslint-plugin": "^7.14.5",
-        "@babel/preset-env": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
         "@commitlint/cli": "^12.1.4",
         "@picgo/bump-version": "^1.1.0",
         "@vitejs/plugin-legacy": "^1.4.2",
@@ -71,7 +71,7 @@
         "concurrently": "^6.2.0",
         "cross-env": "^7.0.3",
         "cssnano": "^5.0.6",
-        "eslint": "7.28.0",
+        "eslint": "^7.29.0",
         "eslint-config-google": "^0.14.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-html": "^6.1.2",
@@ -79,6 +79,7 @@
         "format-package": "^6.1.0",
         "husky": "^6.0.0",
         "npm-run-all": "^4.1.5",
+        "postcss": "^8.3.5",
         "postcss-import": "^14.0.2",
         "postcss-preset-env": "^6.7.0",
         "prettier": "2.3.1",
