--- a/package.json
+++ b/package.json
@@ -9,19 +9,10 @@
         "url": "https://github.com/loctran016/frontend-boilerplate.git"
     },
     "author": "loctran016",
-    "config": {
-        "commitizen": {
-            "path": "./node_modules/cz-customizable"
-        },
-        "cz-customizable": {
-            "config": "./node_modules/@picgo/bump-version/.cz-config.js"
-        }
-    },
     "scripts": {
         "build": "NODE_ENV=production vite build",
         "build-dev": "build && vite preview",
-        "cz": "git add . && git-cz && git push origin main",
-        "dev": "cross-env NODE_ENV=development vite",
+        "dev": "NODE_ENV=development BROWSER=firefox vite",
         "format": "concurrently \"yarn:format:*\" && echo Please apply the diff",
         "format:eslint": "echo Fixing Lint Issues With Eslint... && yarn eslint --ext .js --fix --quiet && echo Fix generated successfully. || (echo Fix failed! && exit 1)",
         "format:pkg": "format-package -w",
@@ -39,53 +30,34 @@
         "postinstall": "husky install",
         "release": "bump-version"
     },
-    "husky": {
-        "hooks": {
-            "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-        }
-    },
     "browserslist": [
         "defaults",
         "not IE 11",
         "maintained node versions",
         "> 5% in VN"
     ],
-    "commitlint": {
-        "extends": [
-            "./node_modules/@picgo/bump-version/commitlint-picgo"
-        ]
-    },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.15.3",
-        "alpinejs": "^3.1.1",
-        "overlayscrollbars": "^1.13.1"
+        "@fortawesome/fontawesome-free": "^5.15.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.14.6",
-        "@babel/eslint-plugin": "^7.14.5",
-        "@babel/preset-env": "^7.14.7",
         "@commitlint/cli": "^12.1.4",
-        "@picgo/bump-version": "^1.1.0",
-        "@vitejs/plugin-legacy": "^1.4.2",
-        "autoprefixer": "^10.2.6",
+        "@commitlint/config-conventional": "^12.1.4",
+        "@vitejs/plugin-legacy": "^1.4.4",
+        "autoprefixer": "^10.3.1",
         "concurrently": "^6.2.0",
-        "cross-env": "^7.0.3",
         "cssnano": "^5.0.6",
         "eslint": "^7.29.0",
-        "eslint-config-google": "^0.14.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-config-standard": "^16.0.3",
         "eslint-plugin-html": "^6.1.2",
-        "favicons": "^6.2.2",
         "format-package": "^6.1.0",
-        "husky": "^6.0.0",
-        "npm-run-all": "^4.1.5",
-        "postcss": "^8.3.5",
-        "postcss-import": "^14.0.2",
+        "husky": "^7.0.1",
+        "postcss": "^8.3.6",
         "postcss-preset-env": "^6.7.0",
-        "prettier": "2.3.1",
+        "prettier": "^2.3.2",
         "stylelint": "13.13.1",
         "stylelint-config-prettier": "^8.0.2",
         "stylelint-config-standard": "22.0.0",
-        "vite": "^2.3.8"
+        "vite": "^2.4.3"
     }
 }
