--- a/.eslintignore
+++ b/.eslintignore
@@ -7,5 +7,7 @@ public
 ######################
 src/lib
 *.min.js
-reset.css
-diagnostics.css
+
+# Minified CSS Library
+######################
+src/css/vendors/**/*.min.css
