--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/loctran016/frontend-boilerplate.git"
+    "url": "https://github.com/loctran016/template.git"
   },
   "author": "loctran016",
   "scripts": {
     "build": "NODE_ENV=production vite build",
     "build-dev": "build && vite preview",
-    "dev": "NODE_ENV=development BROWSER=firefox vite",
+    "dev": "NODE_ENV=development vite",
     "format": "concurrently \"yarn:format:*\" && echo Please apply the diff",
     "format:eslint": "echo Fixing Lint Issues With Eslint... && yarn eslint --ext .js --fix --quiet && echo Fix generated successfully. || (echo Fix failed! && exit 1)",
     "format:pkg": "format-package -w",
@@ -40,34 +40,35 @@
     "maintained node versions",
     "> 5% in VN"
   ],
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4"
-  },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
-    "@vitejs/plugin-legacy": "^1.5.1",
-    "autoprefixer": "^10.3.1",
-    "concurrently": "^6.2.0",
-    "cssnano": "^5.0.7",
+    "@iconify/json": "^1.1.403",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.24",
+    "@vitejs/plugin-legacy": "^1.5.3",
+    "autoprefixer": "^10.3.4",
+    "concurrently": "^6.2.1",
+    "cssnano": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "format-package": "^6.1.0",
-    "husky": "^7.0.1",
+    "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "postcss": "^8.3.6",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^2.3.2",
-    "stylelint": "13.13.1",
+    "prettier": "^2.4.1",
+    "stylelint": "^13.13.1",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "22.0.0",
-    "vite": "^2.4.4"
+    "stylelint-config-standard": "^22.0.0",
+    "svelte": "^3.42.6",
+    "unplugin-icons": "^0.11.3",
+    "vite": "^2.5.10"
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix",
